# bachelorarbeit_AesCtr128

./: README.md
aes128ctr_0_implementation/: build.gradle  settings.gradle
aes128ctr_0_implementation/src/main/java/: Benchmark.java
aes128ctr_0_implementation/src/main/java/aes/core/: AesBlockCipher.java
aes128ctr_0_implementation/src/main/java/aes/modes/: CtrAes128.java
aes128ctr_0_implementation/src/main/java/aes/utils/: AesKey128.java
aes128ctr_0_implementation/src/test/java/aes/core/: AesBlockCipherTest.java
aes128ctr_0_implementation/src/test/java/aes/modes/: CtrTest.java
aes128ctr_0_implementation/src/test/java/aes/utils/: AesKeyTest.java
aes128ctr_1_testdateien_benchmark/: .gitignore
aes128ctr_1_testdateien_benchmark/0_input/: README.md  generate_file.sh  input_1000KB.txt  input_100KB.txt  input_10KB.txt  input_1KB.txt
aes128ctr_2_analyse_benchmark/: .gitignore  README.md  benchmark_analyse_createGraphs.py  benchmark_analyse_createGraphs_macos.py  benchmark_analyse_createGraphs_windows.py  benchmark_messdaten.xlsx  benchmark_messdaten_windows.xlsx  pyproject.toml
