[tool.poetry]
name = "analyse-messdaten"
version = "0.1.0"
description = ""
authors = ["scheggaB <bastizahn@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
